src/index.css
@import url("https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");

@import "tailwindcss";

@theme {
  --color-primary: #fdf0e2;
  --color-secondary: #c08521;
  --color-secondary-100: #c085211a;
  --color-secondary-250: #c0852140;
  --color-secondary-300: #c085214d;
  --color-secondary-500: #c0852180;
  --color-on-secondary: #fdf0e2;
  --color-tertiary: #41372c;
  --color-tertiary-300: #41372c4d;
  --color-tertiary-850: #41362cd9;

  --font-inria-sans: "Inria Sans", sans-serif;

  --text-sm: 12px;
  --text-base: 16px;
  --text-md: 20px;

  --text-lg: 24px;
  --text-lg--line-height: 28px;

  --text-xl: 28px;
  --text-2xl: 32px;
  --text-3xl: 36px;
  --text-4xl: 42px;
  --text-5xl: 48px;
  --text-6xl: 64px;
  --text-7xl: 72px;
}

.simplebar-content::before {
  content: "";
  display: block;
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
}

.simplebar-content {
  display: grid;
  grid-template-columns: repeat(1, minmax(0, 1fr));
  gap: 1.5rem;
}

@media screen and (min-width: 1280px) {
  .simplebar-content {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
}

.project-box::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 10px; /* Adjust this value for a more gradual fade */
  background: linear-gradient(
    to bottom,
    rgba(255, 245, 230, 0) 0%,
    rgba(200, 140, 70, 0.5) 80%,
    rgba(200, 140, 70, 0.8) 100%
  );
  pointer-events: none; /* Allows interactions with content */
}

